# observability-2.0

./: .gitignore  README.md  docker-compose.yaml
apm/: config.yaml
apps/: docker-compose.yaml
apps/fee-calculator/: Dockerfile  pom.xml  postman_collection.json
apps/fee-calculator/src/main/java/com/example/feecalculator/: FeeCalculatorApplication.java
apps/fee-calculator/src/main/java/com/example/feecalculator/config/: OtelConfig.java
apps/fee-calculator/src/main/java/com/example/feecalculator/controller/: FeeCalculatorController.java
apps/fee-calculator/src/main/java/com/example/feecalculator/model/: PaymentFeeCalculationRequest.java  PaymentFeeResponse.java
apps/fee-calculator/src/main/java/com/example/feecalculator/service/: FeeService.java
apps/fee-calculator/src/main/resources/: application.yml  log4j2.json
apps/nodejs-logging/: docker-compose.yaml
apps/nodejs-logging/app/: index.js  logger.js  metrics.js  opentelemetry-instrumentation.js  package-lock.json  package.json
apps/nodejs-logging/bck/: index.js
apps/payment-service/: .env-docker  Dockerfile  pyproject.toml
apps/payment-service/app/: __init__.py  config.py  logging_config.py  main.py  otel_log_exporter.py  telemetry.py
apps/payment-service/app/routers/: payments.py
apps/payment-service/app/services/: payment_fee_service.py  user_service.py
apps/postgres/: init.sql
apps/user-service/app/: index.js  logger.js  opentelemetry-instrumentation.js  package-lock.json  package.json
elastic/: config.yaml
example-apps/nodejs-logging/: Dockerfile  docker-compose.yaml
example-apps/nodejs-logging/app/: index.js  logger.js  package-lock.json  package.json
fluent-bit/: fluent-bit.conf  parser_docker.conf
kibana/: config.yaml
otel/: config.yaml
